added color palettes, removed unused fields, improved CSS

--- a/components/faq_section.html
+++ b/components/faq_section.html
@@ -2,7 +2,7 @@
 
 <section class="content__row faq__section" data-id="{{section.section_id}}">
 {% for question in section.questions %}
-  <section class="content__row faq__section">
+  <section class="content__row faq__section-content">
     <div class="faq__section-content-container">
       <h2 class="faq__question">{{ question.question }}</h2>
       <div class="faq__answer">
