--- a/components/product_grid_item.html
+++ b/components/product_grid_item.html
@@ -1,16 +1,17 @@
 {% set product_page = include_dict.product_page %}
 
 <li class="product-grid__item">
-    <a href="{{ product_page.url | relative_url }}">
-        <figure class="product-grid__item-figure js-figure-link">
-            {% set include_dict = {'image': product_page.params.default_thumbnail_image, 'alt': product_page.title, 'cssClass': 'product-grid__item-image'} %}
+    <figure class="product-grid__item-figure">
+        <a class="product-grid__item-link" href="{{ product_page.url | relative_url }}">
+            {% set include_dict = {'image': product_page.params.default_thumbnail_image, 'alt': product_page.title,
+            'cssClass': 'product-grid__item-image'} %}
             {% include "picture.html" %}
-            <figcaption>
-                {% set include_dict = {'product_page': product_page, 'component': 'product-grid'} %}
-                {% include "small_buy_button.html" %}
-            </figcaption>
-        </figure>
-    </a>
+        </a>
+        <figcaption>
+            {% set include_dict = {'product_page': product_page, 'component': 'product-grid'} %}
+            {% include "small_buy_button.html" %}
+        </figcaption>
+    </figure>
     <div class="product-grid__definition">
         <a href="{{ product_page.url | relative_url }}"><h3 class="product-grid__title">{{ product_page.title }}</h3></a>
         {% if product_page.params.category %}
