--- a/sass/imports/_snipcart.scss
+++ b/sass/imports/_snipcart.scss
@@ -1,139 +1,160 @@
-.form__separator {
-    border: none;
-    border-top: solid 1px $color_light;
-}
-
-.snipcart {
-    &-layout {
-        background-color: transparent;
-    }
-
-    &-layout__header {
-        min-height: 80px;
-        margin-top: $spacing--unit*2;
-        margin-bottom: $spacing--unit*2;
-
-        @include smaller-than-tablet {
-            margin-bottom: 0;
+#snipcart {
+    .snipcart {
+        &-cart-button,
+        &-item-line__image {
+            border-radius: $spacing--unit;
         }
-    }
 
-    &-cart-button {
-        border-radius: $spacing--unit;
-    }
-
-    &-cart-header {
-        background-color: transparent;
-    }
-
-    &-cart-header__title {
-        img {
+        &-modal__logo {
             margin-left: auto;
             margin-right: auto;
             max-height: $spacing--unit*5;
         }
-    }
 
-    &-modal__logo {
-        margin-left: auto;
-        margin-right: auto;
-        max-height: $spacing--unit*5;
-    }
+        &-cart-header,
+        &-cart__content,
+        &-discount-box {
+            background-color: transparent;
+        }
 
-    &-modal__container {
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-image: $background_images_cart;
-    }
+        &-cart-button {
+            &--highlight {
+                background: $color_active;
 
-    &-cart-button--highlight {
-        background-image: none;
-        background-color: $color_active;
+                &:hover {
+                    background: $color_active_medium;
+                }
+            }
+
+            &--secondary{
+                color: $color_medium;
+                background: $color_light;
+            }
+
+            &--disabled,
+            &--loading {
+                background: $color_active_medium;
+            }
+        }
+
+        &__icon path.active,
+        &__icon--blue-dark path,
+        &-modal__close-icon path {
+            fill: $color_active;
+        }
+
+        &__actions--link,
+        &-discount-box__submit,
+        &-guest-checkout__link,
+        &-register__register-link,
+        &-signin__register-link,
+        &-signin__forgot-password,
+        &-order__invoice-number--highlight {
+            color: $color_active_medium;
+        }
+
+        &-discount-box__form {
+            border-color: $color_light;
+        }
+
+        &-checkbox:focus+label:before,
+        &-checkbox:hover+label:before,
+        &-checkbox:checked+label:before {
+            border-color: $color_active;
+        }
+
+        &__box--badge-highlight,
+        &-form-radio:checked+label:before,
+        &-checkbox:checked+label:before {
+            background: $color_active;
+        }
+    }
+}
+
+@each $palette in map-keys($theme_palettes) {
+    .palette-#{$palette} {
+        #snipcart {
+            color: map-deep-get($theme-palettes, $palette, "dark");
+
+            .snipcart {
+                &-modal,
+                &-modal__container,
+                &-featured-payment-methods__title {
+                    background-color: map-deep-get($theme-palettes, $palette, "lighter");
+                }
+
+                &-featured-payment-methods--no-background {
+                    .snipcart-featured-payment-methods__title {
+                        background-color: transparent;
+                    }
+                }
         
-        &:hover {
-            background-color: $color_active_medium;
+                &__box--gray,
+                &-cart-summary {
+                    background-color: map-deep-get($theme-palettes, $palette, "lightest");
+                }
+
+                &-cart-button {
+                    &--highlight {
+                        background: map-deep-get($theme-palettes, $palette, "active");
+                        
+                        &:hover {
+                            background: map-deep-get($theme-palettes, $palette, "active_medium");
+                        }
+                    }
+        
+                    &--secondary{
+                        color: map-deep-get($theme-palettes, $palette, "medium");
+                        background: map-deep-get($theme-palettes, $palette, "light");
+                    }
+        
+                    &--disabled,
+                    &--loading {
+                        background: map-deep-get($theme-palettes, $palette, "active_medium");
+                    }
+                }
+
+                &__icon path.active,
+                &__icon--blue-dark path,
+                &-modal__close-icon path {
+                    fill: map-deep-get($theme-palettes, $palette, "active");
+                }
+
+                &__box--badge{
+                    border-color: map-deep-get($theme-palettes, $palette, "lighter");
+                    background-color:map-deep-get($theme-palettes, $palette, "lightest");
+                }
+
+                &-discount-box__form {
+                    border-color: map-deep-get($theme-palettes, $palette, "light");
+                }
+
+                &__actions--link,
+                &-discount-box__submit,
+                &-guest-checkout__link,
+                &-register__register-link,
+                &-signin__register-link,
+                &-signin__forgot-password,
+                &-order__invoice-number--highlight {
+                    color: map-deep-get($theme-palettes, $palette, "active_medium");
+                }
+
+                &-checkbox:focus+label:before,
+                &-checkbox:hover+label:before,
+                &-checkbox:checked+label:before {
+                    border-color: map-deep-get($theme-palettes, $palette, "active");
+                }
+
+                &__box--badge-highlight,
+                &-form-radio:checked+label:before,
+                &-checkbox:checked+label:before {
+                    background: map-deep-get($theme-palettes, $palette, "active");
+                }
+
+                &-empty-cart {
+                    color: map-deep-get($theme-palettes, $palette, "medium");
+                }
+            }
         }
-    }
-
-    &-cart__content {
-        background-color: transparent;
-    }
-    
-    &__icon {
-        path.active {
-            fill: $color_active;
-        }
-    }
-
-    &__icon--blue-light {
-        path {
-            fill: $color_active;
-        }
-    }
-
-    &-form-input:focus {
-        border-color: $color_active;
-    }
-
-    &-discount-box {
-        background-color: transparent;
-        border-color: #6B797A;
-    }
-
-    &-discount-box__form {
-        border-color: #6B797A;
-    }
-
-    &-discount-box__button {
-        border-color: #6B797A;
-    }
-
-    &-discount-box__submit {
-        color: $color_active;
-    }
-
-    &__box--badge-highlight {
-        background-image: none;
-        background: linear-gradient(90deg, #384647 0%, #6B797A 100%);
-    }
-    
-    &__order__invoice__number--highlight {
-        color: $color_active;
-    }
-
-    &__actions--link {
-        color: $color_active_medium;
-    }
-
-    &__icon--blue-dark {
-        path {
-            fill: $color_active_medium;
-        }
-    }
-
-    &__form__radio:checked+label:before {
-        background: none;
-        background-color: $color_active;
-        border-color: $color_active_light;
-    }
-
-    &__shipping__rates__item--highlight {
-        border-color: $color_active_medium;
-    }
-
-    &__modal {
-        background-color: rgba($color_light, 1);
-
-        &__container {
-            background-color: rgba($color_light, 1);
-        }
-
-        &__header {
-            background-color: rgba($color_light, 1);
-        }
-    }
-
-    &-item-line__image {
-        border-radius: 8px;
     }
 }
