--- a/sass/imports/_store.scss
+++ b/sass/imports/_store.scss
@@ -1,13 +1,13 @@
 .store {
     &__title {
-        font-family: $font_family_primairy;
+        font-family: $font_family_primary;
         font-size: $font_size_xlarge;
         line-height: 60px;
         @include smaller-than-tablet { 
             font-size: $font_size_large; 
             line-height: 42px;
         }
-        color: $color_dark_grey;
+        color: $color_darker;
     }
 
     &__container {
@@ -28,15 +28,16 @@
 
     &__nav {
         flex: 1;
+        height: -moz-fit-content;
         height: fit-content;
         position: relative;
-        background-color: #F6F6F6;
+        background-color: $color_lightest;
         border-radius: 0px $spacing--unit*3 $spacing--unit*3 0px;
         margin-right: 50px;
         &:before {
             content: "";
             border-radius: 0px $spacing--unit*3 $spacing--unit*3 0px;
-            background-color: #F6F6F6;
+            background-color: $color_lightest;
             position: absolute;
             height: 100%;
             width: 100vw;
@@ -45,8 +46,8 @@
         }
 
         @include smaller-than-tablet {
-            border-bottom: 1px solid transparentize($color_light_grey, 0.8);
-            border-top: 1px solid transparentize($color_light_grey, 0.8);
+            border-bottom: 1px solid $color_light;
+            border-top: 1px solid $color_light;
             margin: 0;
             padding: 0;
             &:before { content: none; }
@@ -71,34 +72,30 @@
         padding: 15px 20px;
         margin: 0;
         text-transform: uppercase;
-        font-size: $font_size_small;
+        font-family: $font_family_primary;
+        font-size: $font_size_regular;
         white-space: nowrap;
         @include smaller-than-tablet {
             padding: 0;
-            font-size: 12px;
             &:not(:last-child) { margin-bottom: 15px; } 
         }
     }
 
     &__nav-item-link {
         display: inline-block;
-        font-family: $font_family_primairy;
         font-weight: normal;
-        font-size: $font_size_regular;
         width: 100%;
         @include smaller-than-tablet {
-            font-size: $font_size_regular;
-            color: $color_light_grey;
+            color: $color_medium;
         }
 
         &--active {
             font-weight: bold;
-            color: darken($color_dark, 10%);
+            color: $color_darker;
             border-bottom: solid 1px $color_active;
             padding-bottom: 5px;
             @include smaller-than-tablet {
                 border-bottom: none;
-                color: $color_dark_grey;
             }
         }
     }
@@ -111,6 +108,41 @@
     &__product-grid {
         .product-grid__item {
             margin-bottom: $spacing--unit*4.5;
+        }
+    }
+}
+
+@each $palette in map-keys($theme_palettes) {
+    .palette-#{$palette} {
+        .store {
+            &__title {
+                color: $color_darker;
+            }
+
+            &__nav {
+                background-color: map-deep-get($theme-palettes, $palette, "lightest");
+
+                &:before {
+                    background-color: map-deep-get($theme-palettes, $palette, "lightest");
+                }
+
+                @include smaller-than-tablet {
+                    background-color: transparent;
+                    border-bottom-color: map-deep-get($theme-palettes, $palette, "light");
+                    border-top-color: map-deep-get($theme-palettes, $palette, "light");
+                }
+            }
+
+            &__nav-item-link {
+                @include smaller-than-tablet {
+                    color: map-deep-get($theme-palettes, $palette, "medium");
+                }
+        
+                &--active {
+                    color: map-deep-get($theme-palettes, $palette, "darker");
+                    border-bottom-color: map-deep-get($theme-palettes, $palette, "active");
+                }
+            }
         }
     }
 }
