--- a/components/contact_section.html
+++ b/components/contact_section.html
@@ -1,18 +1,18 @@
 {% set section = include_dict.section %}
-<section class="content__row content__row--full-width content__row--mb-0  faq__contact"  data-id="{{section.section_id}}">
-  {% if section.image %}<img src="{{ section.image | relative_url }}" alt="" class="faq__contact-image">{% endif %}
-  <div class="faq__contact-text-container">
-    <h3 class="faq__contact-title">Have any questions? <br> Contact us.</h3>
-    <div class="faq__contact-info-container">
-      <p class="faq__contact-address">{{ section.address }}</p>
-      <p class="faq__contact-telephone">{{ section.phone }}</p>
-      <p class="faq__contact-email">{{ section.email }}</p>
-      <div class="faq__seperator"></div>
+<section class="content__row content__row--full-width contact__section" data-id="{{section.section_id}}">
+  {% if section.image %}<img src="{{ section.image | relative_url }}" alt="" class="contact__image">{% endif %}
+  <div class="contact__text-container">
+    <h3 class="contact__title">Have any questions? <br> Contact us.</h3>
+    <div class="contact__info-container">
+      <p class="contact__address">{{ section.address }}</p>
+      <p class="contact__telephone">{{ section.phone }}</p>
+      <p class="contact__email">{{ section.email }}</p>
+      <div class="contact__separator"></div>
       {% if section.mapUrl %}
-      <a class="faq__map-link link link--filled link--reversed" href="{{section.mapUrl}}">
+      <a class="contact__map-link link link--filled link--reversed" href="{{section.mapUrl}}">
         On the map
-        <svg width="17" height="24" viewBox="0 0 17 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M8.25031 0C3.67589 0 0 3.67445 0 8.25031C0 12.8247 8.25031 24 8.25031 24C8.25031 24 16.5006 12.8247 16.5006 8.25031C16.5006 3.67445 12.8247 0 8.25031 0ZM8.25031 11.9993C6.15084 11.9993 4.49991 10.3498 4.49991 8.24888C4.49991 6.1494 6.1494 4.49847 8.25031 4.49847C10.3498 4.49847 12.0007 6.14796 12.0007 8.24888C12.0007 10.3498 10.3498 11.9993 8.25031 11.9993Z" fill="white"/>
+        <svg width="17" height="24" viewBox="0 0 17 24" xmlns="http://www.w3.org/2000/svg">
+          <path d="M8.25 0c-4.574 0-8.25 3.674-8.25 8.25 0 4.574 8.25 15.75 8.25 15.75s8.25-11.175 8.25-15.75c0-4.576-3.676-8.25-8.25-8.25zM8.25 11.999c-2.099 0-3.75-1.65-3.75-3.75 0-2.099 1.649-3.75 3.75-3.75 2.099 0 3.75 1.649 3.75 3.75s-1.651 3.75-3.75 3.75z"></path>
         </svg>
       </a>
       {% endif %}
