--- a/components/footer.html
+++ b/components/footer.html
@@ -3,8 +3,8 @@
 {% set menu = site.params.main_menu %}
 <footer class="footer">
     <div class="footer__container">
-        <a href="{{ '/' | relative_url }}">
-            {% set include_dict = {'image': site.params.logo_light, 'cssClass': 'footer__logo', 'alt': 'Planty logo'} %}
+        <a class="footer__logo" href="{{ '/' | relative_url }}">
+            {% set include_dict = {'image': site.params.logo_light, 'cssClass': 'footer__logo-image', 'alt': 'Site logo'} %}
             {% include "picture.html" %}
         </a>
         <ul class="footer__nav">
