--- a/components/header.html
+++ b/components/header.html
@@ -1,12 +1,16 @@
 {% set page = include_dict.page %}
 {% set site = include_dict.site %}
-{% set white_header = page.params.white_header | default(false, true) %}
+{% set is_white_header = page.params.white_header | default(false, true) %}
+{% set is_logo_light = false %}
+{% if is_white_header or page.layout == "product" %}
+    {% set is_logo_light = true %}
+{% endif %}
 
 <header class="header">
-    <nav {{ classNames('nav', {'nav--light': white_header, 'nav--dark': white_header != true}) }}>
-        <div class="nav__logo" data-dark="{{site.params.logo_dark}}">
+    <nav {{ classNames('nav', {'nav--light': is_white_header, 'nav--dark': is_white_header != true}) }}>
+        <div class="nav__logo"{% if is_logo_light and site.params.logo_light %} data-original="{{ site.params.logo_light | relative_url }}"{% endif %}{% if site.params.logo_dark %} data-dark="{{ site.params.logo_dark | relative_url }}"{% endif %}>
             <a href="{{ '/' | relative_url }}">
-                {% if white_header or page.layout == "product" %}
+                {% if is_logo_light %}
                     {% set include_dict = {'image': site.params.logo_light, 'cssClass': 'nav__logo-image', 'alt': 'Site logo'} %}
                     {% include "picture.html" %}
                 {% else %}
@@ -26,38 +30,38 @@
                 </li>
             {% endfor %}
         </ul>
-            
         <div class="nav__right">
             <button class="snipcart-checkout nav__button button button--transparent">
                 <span class="button__icon nav__button-icon">
-                    <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M22.907 4.22024C23.0315 4.1993 23.1614 4.20403 23.2896 4.2384L23.2895 4.23818C23.7947 4.37362 24.0977 4.94184 23.9714 5.48253L21.6723 15.1262C21.546 15.5601 21.1671 15.8849 20.7378 15.8849H8.31003L8.86555 18.2952H19.2223C19.7531 18.2952 20.1824 18.7555 20.1824 19.3248C20.1824 19.8941 19.7531 20.3543 19.2223 20.3543H8.13351C7.67862 20.3543 7.29973 20.0295 7.19908 19.5692L3.3095 2.55908H0.960093C0.429223 2.55908 0 2.09881 0 1.52954C0 0.960271 0.429223 0.5 0.960093 0.5H4.0416C4.49648 0.5 4.87538 0.824833 4.97602 1.2851L7.8562 13.8269H20.0304L21.7767 6.45023H13.8998C13.2827 6.45023 12.7823 5.94993 12.7823 5.33277C12.7823 4.71561 13.2827 4.2153 13.8998 4.2153L22.8012 4.21533C22.8369 4.21533 22.8722 4.21699 22.907 4.22024ZM9.92751 24.4999C10.7781 24.4999 11.4678 23.7593 11.4678 22.8472C11.4678 21.9351 10.7781 21.1944 9.92751 21.1944C9.07596 21.1944 8.38623 21.9351 8.38623 22.8472C8.38623 23.7593 9.07596 24.4999 9.92751 24.4999ZM19.4244 22.8472C19.4244 23.7593 18.7346 24.4999 17.8841 24.4999C17.0325 24.4999 16.3428 23.7593 16.3428 22.8472C16.3428 21.9351 17.0325 21.1944 17.8841 21.1944C18.7346 21.1944 19.4244 21.9351 19.4244 22.8472Z" fill="white"/>
-                    </svg>                      
+                    <svg width="24" height="25" viewBox="0 0 24 25" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M22.907 4.22c0.125-0.021 0.254-0.016 0.383 0.018l-0-0c0.505 0.135 0.808 0.704 0.682 1.244l-2.299 9.644c-0.126 0.434-0.505 0.759-0.934 0.759h-12.428l0.556 2.41h10.357c0.531 0 0.96 0.46 0.96 1.030s-0.429 1.029-0.96 1.029h-11.089c-0.455 0-0.834-0.325-0.934-0.785l-3.89-17.010h-2.349c-0.531 0-0.96-0.46-0.96-1.030s0.429-1.030 0.96-1.030h3.082c0.455 0 0.834 0.325 0.934 0.785l2.88 12.542h12.174l1.746-7.377h-7.877c-0.617 0-1.118-0.5-1.118-1.117s0.5-1.117 1.118-1.117l8.901 0c0.036 0 0.071 0.002 0.106 0.005zM9.928 24.5c0.851 0 1.54-0.741 1.54-1.653s-0.69-1.653-1.54-1.653c-0.852 0-1.541 0.741-1.541 1.653s0.69 1.653 1.541 1.653zM19.424 22.847c0 0.912-0.69 1.653-1.54 1.653-0.852 0-1.541-0.741-1.541-1.653s0.69-1.653 1.541-1.653c0.85 0 1.54 0.741 1.54 1.653z"></path>
+                    </svg>
                 </span>
                 <span class="snipcart-items-count nav__total-items button__text">0</span>
             </button>
             <button class="hamburger button button--transparent">
-                <svg width="24" height="16" viewBox="0 0 24 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path class="hamburger__icon-path" fill-rule="evenodd" clip-rule="evenodd" d="M0 1.00049C0 0.448204 0.447715 0.000488281 1 0.000488281H23C23.5523 0.000488281 24 0.448204 24 1.00049C24 1.55277 23.5523 2.00049 23 2.00049H1C0.447716 2.00049 0 1.55277 0 1.00049ZM0 8.00049C0 7.4482 0.447715 7.00049 1 7.00049H13C13.5523 7.00049 14 7.4482 14 8.00049C14 8.55277 13.5523 9.00049 13 9.00049H1C0.447716 9.00049 0 8.55277 0 8.00049ZM1 14.0005C0.447715 14.0005 0 14.4482 0 15.0005C0 15.5528 0.447715 16.0005 1 16.0005H16C16.5523 16.0005 17 15.5528 17 15.0005C17 14.4482 16.5523 14.0005 16 14.0005H1Z" fill="white"/>
-                </svg>                            
+                <svg width="24" height="16" viewBox="0 0 24 16" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M0 1c0-0.552 0.448-1 1-1h22c0.552 0 1 0.448 1 1s-0.448 1-1 1h-22c-0.552 0-1-0.448-1-1zM0 8c0-0.552 0.448-1 1-1h12c0.552 0 1 0.448 1 1s-0.448 1-1 1h-12c-0.552 0-1-0.448-1-1zM1 14.001c-0.552 0-1 0.448-1 1s0.448 1 1 1h15c0.552 0 1-0.448 1-1s-0.448-1-1-1h-15z"></path>
+                </svg>
             </button>
-            <div class="hamburger__content hamburger__content--closed" style="background-image: url({{site.params.hamburger_background_image | relative_url}})">
+            <div class="hamburger__content"{% if site.params.hamburger_background_image %} style="background-image: url('{{site.params.hamburger_background_image | relative_url}}')"{% endif %}>
                 <div class="hamburger__options">
                     <button class="snipcart-checkout button button--transparent">
-                    <span class="button__icon nav__button-icon">
-                        <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" clip-rule="evenodd" d="M22.907 4.22024C23.0315 4.1993 23.1614 4.20403 23.2896 4.2384L23.2895 4.23818C23.7947 4.37362 24.0977 4.94184 23.9714 5.48253L21.6723 15.1262C21.546 15.5601 21.1671 15.8849 20.7378 15.8849H8.31003L8.86555 18.2952H19.2223C19.7531 18.2952 20.1824 18.7555 20.1824 19.3248C20.1824 19.8941 19.7531 20.3543 19.2223 20.3543H8.13351C7.67862 20.3543 7.29973 20.0295 7.19908 19.5692L3.3095 2.55908H0.960093C0.429223 2.55908 0 2.09881 0 1.52954C0 0.960271 0.429223 0.5 0.960093 0.5H4.0416C4.49648 0.5 4.87538 0.824833 4.97602 1.2851L7.8562 13.8269H20.0304L21.7767 6.45023H13.8998C13.2827 6.45023 12.7823 5.94993 12.7823 5.33277C12.7823 4.71561 13.2827 4.2153 13.8998 4.2153L22.8012 4.21533C22.8369 4.21533 22.8722 4.21699 22.907 4.22024ZM9.92751 24.4999C10.7781 24.4999 11.4678 23.7593 11.4678 22.8472C11.4678 21.9351 10.7781 21.1944 9.92751 21.1944C9.07596 21.1944 8.38623 21.9351 8.38623 22.8472C8.38623 23.7593 9.07596 24.4999 9.92751 24.4999ZM19.4244 22.8472C19.4244 23.7593 18.7346 24.4999 17.8841 24.4999C17.0325 24.4999 16.3428 23.7593 16.3428 22.8472C16.3428 21.9351 17.0325 21.1944 17.8841 21.1944C18.7346 21.1944 19.4244 21.9351 19.4244 22.8472Z" fill="white"/>
-                        </svg>                      
-                    </span>
+                        <span class="button__icon nav__button-icon">
+                            <svg width="24" height="25" viewBox="0 0 24 25" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M22.907 4.22c0.125-0.021 0.254-0.016 0.383 0.018l-0-0c0.505 0.135 0.808 0.704 0.682 1.244l-2.299 9.644c-0.126 0.434-0.505 0.759-0.934 0.759h-12.428l0.556 2.41h10.357c0.531 0 0.96 0.46 0.96 1.030s-0.429 1.029-0.96 1.029h-11.089c-0.455 0-0.834-0.325-0.934-0.785l-3.89-17.010h-2.349c-0.531 0-0.96-0.46-0.96-1.030s0.429-1.030 0.96-1.030h3.082c0.455 0 0.834 0.325 0.934 0.785l2.88 12.542h12.174l1.746-7.377h-7.877c-0.617 0-1.118-0.5-1.118-1.117s0.5-1.117 1.118-1.117l8.901 0c0.036 0 0.071 0.002 0.106 0.005zM9.928 24.5c0.851 0 1.54-0.741 1.54-1.653s-0.69-1.653-1.54-1.653c-0.852 0-1.541 0.741-1.541 1.653s0.69 1.653 1.541 1.653zM19.424 22.847c0 0.912-0.69 1.653-1.54 1.653-0.852 0-1.541-0.741-1.541-1.653s0.69-1.653 1.541-1.653c0.85 0 1.54 0.741 1.54 1.653z"></path>
+                            </svg>
+                        </span>
                     </button>
                     <div class="">
-                        <span class="snipcart-items-count"></span> products | <span class="snipcart-total-price"></span>                        </div>
+                        <span class="snipcart-items-count"></span> products | <span class="snipcart-total-price"></span>
                     </div>
+                </div>
                 <button class="link snipcart-checkout hamburger__checkout">
                     Checkout
-                    <svg width="26" height="14" viewBox="0 0 26 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M22.6819 6.07886H0V7.79048H22.8139L18.2402 12.3182L19.434 13.5L26 7L19.434 0.5L18.2402 1.68182L22.6819 6.07886Z" fill="#88DD9B"/>
-                    </svg>                            
+                    <svg width="26" height="14" viewBox="0 0 26 14" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M22.682 6.079h-22.682v1.712h22.814l-4.574 4.528 1.194 1.182 6.566-6.5-6.566-6.5-1.194 1.182 4.442 4.397z"></path>
+                    </svg>
                 </button>
                 <ul class="hamburger__nav">
                     {% for item in site.params.main_menu %}
@@ -70,7 +74,7 @@
                         </li>
                     {% endfor %}
                 </ul>
-            </div>                
+            </div>
         </div>
     </nav>
 </header>
