--- a/sass/imports/_faq.scss
+++ b/sass/imports/_faq.scss
@@ -1,5 +1,7 @@
 .faq {
-  &__section {
+  &__section-content {
+    margin-left: auto;
+    margin-right: auto;
     max-width: 600px;
     &:nth-child(-n + 2) {
       margin-top: $spacing--unit*3;
@@ -8,11 +10,11 @@
 
   &__question {
     line-height: $spacing--unit*4;
-    font-family: $font_family_primairy;
+    font-family: $font_family_primary;
     font-weight: bold;
     font-size: $font_size_medium;
     margin-bottom: 30px;
-    color: #384647;
+    color: $color_dark;
   }
 
   &__answer {
@@ -20,15 +22,14 @@
     font-weight: normal;
     font-size: $font_size_regular;
     line-height: 150%;
-    color: $color_light_grey;
+    color: $color_medium;
     &:after {
       content: "";
-      opacity: 0.2;
       margin-left: auto;
       margin-right: auto;
       margin-top: 50px;
       display: block;
-      background: $color_light_grey;
+      background: $color_light;
       height: 1px;
       width: 100%;
     }
@@ -47,112 +48,21 @@
       list-style-type: disc;
     }
   }
+}
 
-  &__contact {
-    display: flex;
-    background-color: $color_dark;
-    @include smaller-than-tablet {
-      flex-direction: column;
-    }
-  }
-
-  &__contact-image {
-    width: 0;
-    flex: 0.2;
-    object-fit: cover;
-    @include smaller-than-tablet {
-      max-height: 300px;
-      width: initial;
-      flex: initial;
-    }
-  }
-
-  &__contact-title {
-    line-height: 56px;
-    font-family: $font_family_primairy;
-    font-size: 46px;
-    color: $color_dark_grey;
-    margin-bottom: 50px;
-    @include smaller-than-tablet {
-      font-size: $font_size_medium;
-      margin-bottom: 25px;
-      line-height: 29px;
-    }
-  }
-
-  &__contact-text-container {
-    padding: 100px;
-    width: 0;
-    flex: 0.8;
-    flex-grow: 1;
-    background-color: $color_default;
-    margin-bottom: 50px;
-
-    font-style: normal;
-    font-weight: normal;
-    font-size: $font_size_regular;
-    line-height: 150%;
-    color: $color_light_grey;
-    @include smaller-than-tablet {
-      margin-bottom: 0;
-      padding: 25px;
-      padding-top: 40px;
-      padding-bottom: 40px;
-      width: initial;
-      flex: initial;
-    }
-  }
-
-  &__contact-info-container {
-    width: fit-content;
-    display: grid;
-    grid-template-columns: 200px 1fr;
-    grid-template-rows: repeat(1fr, 2);
-    @include smaller-than-tablet {
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      p {
-        margin-bottom: 25px;
+@each $palette in map-keys($theme_palettes) {
+  .palette-#{$palette} {
+    .faq {
+      &__question {
+        color: map-deep-get($theme-palettes, $palette, "dark");
       }
-      a {
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+    
+      &__answer {
+        color: map-deep-get($theme-palettes, $palette, "medium");
+        &:after {
+          background: map-deep-get($theme-palettes, $palette, "light");
+        }
       }
     }
-  }
-
-  &__contact-address {
-    grid-row: 1;
-    grid-column: 1;
-  }
-
-  &__contact-telephone {
-    margin-top: auto;
-    grid-row: 2;
-    grid-column: 1;
-  }
-
-  &__contact-email {
-    grid-row: 1;
-    grid-column: 3;
-  }
-
-  &__map-link {
-    grid-row: 2;
-    grid-column: 3;
-    display: flex;
-  }
-
-  &__seperator {
-    grid-row: 1 / 3;
-    grid-column: 2;
-    width: 1px;
-    background-color: $color_dark;
-    opacity: 0.5;
-    margin-right: $spacing--unit*8;
-    margin-left: $spacing--unit*8;
   }
 }
