--- a/sass/imports/_fonts.scss
+++ b/sass/imports/_fonts.scss
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&family=Open+Sans:wght@400;600;700&display=swap');
 
 body {
     font-family: $font_family_secondary;
