--- a/sass/imports/_hamburger.scss
+++ b/sass/imports/_hamburger.scss
@@ -1,10 +1,15 @@
 .hamburger {
-  @include bigger-than-tablet { display: none; }
+  display: none;
   outline: none;
   padding: 0;
 
+  @include smaller-than-tablet { 
+    display: block;
+  }
+
   &__content {
-    background-color: $color_light;
+    background-color: $color_lighter;
+    color: $color_dark;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -13,30 +18,31 @@
     overflow: hidden;
     z-index: -1;
     top: 0;
-    left: 0;
+    left: -100%;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     background-size: auto 250%;
     background-position: center;
     transition: left .3s ease-in-out;
 
-    &--opened {
-      overflow: hidden;
-      left: 0;
+    @include smaller-than-tablet { 
+      .nav--opened & {
+        left: 0;
+      }
     }
-    &--closed { left: calc(-100vw + -100vw); }
   }
 
   &__options {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: $font_family_primairy;
+    font-family: $font_family_primary;
     font-weight: bold;
     font-size: $font_size_medium;
   }
 
   &__checkout {
+    cursor: pointer;
     font-size: $font_size_regular;
     margin-top: 30px;
     margin-bottom: 70px;
@@ -53,7 +59,18 @@
  
   &__nav-link {
     text-align: center;
-    font-family: $font_family_primairy;
+    font-family: $font_family_primary;
     font-size: $font_size_large;
+  }
+}
+
+@each $palette in map-keys($theme_palettes) {
+  .palette-#{$palette} {
+    .hamburger {
+      &__content {
+        background-color: map-deep-get($theme-palettes, $palette, "lighter");
+        color: map-deep-get($theme-palettes, $palette, "dark");
+      }
+    }
   }
 }
