--- a/sass/imports/_product.scss
+++ b/sass/imports/_product.scss
@@ -4,11 +4,11 @@
     grid-template-rows: 210px $spacing--unit*64 $spacing--unit*9;
     margin-top: -110px;
 
-    &__background-left-overlay {
-        background: radial-gradient(at 35% top, rgba(black, 0.35), rgba(black, 0.25));
+    &__background-left {
+        background: $color_dark;
         grid-column: 1 / 3;
         grid-row: 1 / 4;
-        z-index: 1;
+        position: relative;
         @include smaller-than-tablet { 
             grid-column: 1 / 8;
             grid-row: 1 / 3;
@@ -16,15 +16,14 @@
         }
     }
 
-    &__background-left { 
-        grid-column: 1 / 3;
-        grid-row: 1 / 4;
+    &__background-left-img {
         background-size: cover;
-        @include smaller-than-tablet { 
-            grid-column: 1 / 8;
-            grid-row: 1 / 3;
-            margin-bottom: 20%;
-        }
+        background-repeat: no-repeat;
+        bottom: 0;
+        left: 0;
+        position: absolute;
+        right: 0;
+        top: 0;
     }
 
     &__background-right { 
@@ -95,11 +94,11 @@
     }
 
     &__title {
-        font-family: $font_family_primairy;
+        font-family: $font_family_primary;
         font-weight: bold;
         font-size: 42px;
         margin-bottom: 20px;
-        color: $color_dark_grey;
+        color: $color_darker;
         
         @include smaller-than-tablet { 
             font-size: $font_size_large;
@@ -108,10 +107,11 @@
 
     &__category {
         font-weight: 600;
-        font-family: $font_family_primairy;
+        font-family: $font_family_primary;
         text-transform: uppercase;
         font-size: $font_size_medium;
         margin-bottom: 25px;
+        color: $color_darker;
 
         @include smaller-than-tablet { 
             font-size: $font_size_regular;
@@ -119,11 +119,11 @@
     }
 
     &__price {
-        font-family: $font_family_primairy;
+        font-family: $font_family_primary;
         margin-bottom: $spacing--unit*5;
         font-size: $font_size_large;
         font-weight: 600;
-        color: $color_dark_grey;
+        color: $color_darker;
 
         @include smaller-than-tablet { 
             font-size: $font_size_medium;
@@ -145,23 +145,28 @@
         align-items: center;
         height: $spacing--unit*13;
         background-color: $color_active;
-        font-size: $spacing--unit*2;  
-        color: white;      
+        font-size: $spacing--unit*2;
+        font-weight: bold;
+        color: white;
         background-size: auto 700%;
         background-position: center;
+        margin-top: auto;
 
-        svg { 
-            margin: 0;
-            margin-right: 10px;
+        svg {
+            color: inherit;
+            fill: currentColor;
+            margin: 0 10px 0 0;
             height: 26px;
-        }        
+        }
     }
 
     &__back-to-store-link {
         color: white;
-        font-weight: 400;
+        font-weight: bold;
         font-size: $spacing--unit*2;
         svg {
+            color: inherit;
+            fill: currentColor;
             margin-right: $spacing--unit*2;
         }
     }
@@ -178,6 +183,30 @@
             display: flex; 
             justify-content: center;
             align-items: center;
+        }
+    }
+}
+
+@each $palette in map-keys($theme_palettes) {
+    .palette-#{$palette} {
+        .product {
+            &__background-left-overlay {
+                background: map-deep-get($theme-palettes, $palette, "dark");
+            }
+
+            &__title,
+            &__price,
+            &__category {
+                color: map-deep-get($theme-palettes, $palette, "darker");
+            }
+        
+            &__description {
+                color: map-deep-get($theme-palettes, $palette, "medium");
+            }
+        
+            &__back-to-store {
+                background-color: map-deep-get($theme-palettes, $palette, "active");
+            }
         }
     }
 }
